MMA-7185 Legg til fleire itestar for PDL
Co-authored-by: Joakim Borgersen <joakim.borgersen@nav.no>