@@ -19,24 +19,61 @@ public class AvsluttAlleSakerITest extends AbstractITest {
 
 	@BeforeEach
 	public void setUp() {
-		populerSakRepository();
-	}
+ 	}
 
 	@Test
 	public void skalAvslutteSaker() {
 		stubAzure();
 		stubPdl("hentIdenterBolk.json");
+		populerSakRepository();
 
 		avsluttAlleSakerService.avsluttAlleSaker();
 
-		List<Sak> sak1 = sakRepository.findSaksBySakIdIn(List.of(123L));
-		assertThat(sak1.getFirst().getStatus()).isEqualTo("HENTET_FRA_PDL");
+		List<Sak> saker = sakRepository.findSaksBySakIdIn(List.of(123L, 234L));
+		Sak sak1 = saker.get(0);
+		Sak sak2 = saker.get(1);
+
+		assertThat(sak1.getStatus()).isEqualTo("HENTET_FRA_PDL");
+		assertThat(sak1.getAktoerId()).isEqualTo("2345678901234");
+		assertThat(sak2.getStatus()).isEqualTo("HENTET_FRA_PDL");
+		assertThat(sak2.getAktoerId()).isEqualTo("1234567891234");
+	}
+
+	@Test
+	public void skalOppdatereStatusTilPdlFantIkkeNyAktoerId() {
+		stubAzure();
+		stubPdl("hentIdenterBolkSomInneholderNotFound.json");
+		populerSakRepository();
+
+		avsluttAlleSakerService.avsluttAlleSaker();
+
+		Sak sak = sakRepository.findSaksBySakIdIn(List.of(123L)).getFirst();
+		assertThat(sak.getStatus()).isEqualTo("PDL_FANT_IKKE_NY_AKTOERID");
+	}
+
+	@Test
+	public void skalOppdatereStatusTilSkalIkkeHenteFraPdl() {
+		Sak sakForOrganisasjon = Sak.builder()
+				.sakId(345L)
+				.applikasjon("FS22")
+				.fagsaknr(null)
+				.aktoerId(null)
+				.orgnr("123456789")
+				.build();
+		sakRepository.save(sakForOrganisasjon);
+		commitAndBeginNewTransaction();
+
+		avsluttAlleSakerService.avsluttAlleSaker();
+
+		Sak sak = sakRepository.findSaksBySakIdIn(List.of(345L)).getFirst();
+		assertThat(sak.getStatus()).isEqualTo("SKAL_IKKE_HENTE_FRA_PDL");
 	}
 
 	@Test
 	public void skalKastePdlFunctionalException() {
 		stubAzure();
 		stubPdl("validationError.json");
+		populerSakRepository();
 
 		assertThatExceptionOfType(PdlFunctionalException.class)
 				.isThrownBy(() -> avsluttAlleSakerService.avsluttAlleSaker());
@@ -48,7 +85,7 @@ public class AvsluttAlleSakerITest extends AbstractITest {
 				.sakId(123L)
 				.applikasjon("FS22")
 				.fagsaknr(null)
-				.aktoerId("12345678911")
+				.aktoerId("1234567891123")
 				.orgnr(null)
 				.build();
 
@@ -56,7 +93,7 @@ public class AvsluttAlleSakerITest extends AbstractITest {
 				.sakId(234L)
 				.applikasjon("AO01")
 				.fagsaknr("123")
-				.aktoerId("12345678912")
+				.aktoerId("1234567891234")
 				.orgnr(null)
 				.build();
 
